	 . Added quoting because it was needed to prevent shell expansion, broking the
           toint function sometimes (Closes: Trac#11)
	 . Fixed reportspace option (Closes: Trac#10)
	 . Fixed ldap handler not recognizing database suffix (Closes: Trac#28)
    handler changes
	dup:
	 . Support duplicity >= 0.4.3 invocation syntax (--ssh-command option
	   is not supported anymore) (Closes: #447425)
        ldap:
	 . Fixed shell command quoting issues, missing 'then' clauses, cleaned up
	   compress=yes to be less redundant and not create empty uncompressed
	   file (Closes: #394935)
	 . Fixed ninjahelper to properly set compress option, standardized on yes/no
	   instead of on/off
	 . Fixed problem that caused combination of slapcat and compress to not work
	   together (Closes: Trac#29)
	 . Applied patch from romain.tartiere@healthgrid.org to fix the SSL/TLS options
	   to be correct, also set TLS to be the default over SSL (Closes: Trac#13)
	maildir:
	 . Added an examples file (Closes: Trac#23)
	 . Applied patch from Anarcat that fixes the cp/mkdir calls to not use GNU 
	   coreutils options, as well as some bashisms (Closes: Trac#24)
	 . Fix test mode (Closes: Trac#25)
        mysql:
	 . Fixed case where odd combination of configuration options caused sqldump
	   backups to get overwritten with an empty file (Closes: #402679)
	 . Added 'nodata' option to enable you to specify tables that you want to omit
	   the data from a backup, but still backup the table structure. This is very
	   useful in cases where tables contain large amounts of cache data. See the
	   example.mysql for options, thanks Daniel Bonniot (Closes: #408829)
	 . Enhance code for selecting databases by asking MySQL not to give us the 
	   header (-N), to not draw pretty boxes around the output (-B), send the query 
	   via -e instead of a pipe and ensure MySQL listens to -B. Thanks to
	   Matthew Palmer (Closes: #452039).
	pgsql: